# nono-harness-manager

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_add_skill_description_fields.sql  0003_add_mcp_servers.sql  0004_ai_ready_architecture.sql  0005_trust_policy_auto_apply.sql  0006_fix_skill_sources_schema_drift.sql  0007_skills_lifecycle_fields.sql  0008_project_bindings.sql  0009_scan_offsets.sql  0010_agent_resource_usage_events.sql  0011_agents_discovery_v2.sql  0012_agents_unique_key.sql  0013_ai_settings.sql  0014_ai_tasks.sql  0015_ai_chat.sql  0016_blocked_proposals_enhancement.sql
src-tauri/src/: lib.rs  main.rs  trust_policy.rs
src-tauri/src/ai/: llm_client.rs  mod.rs  prompts.rs  safe_tools.rs  tool_registry.rs  tool_runtime.rs
src-tauri/src/ai/tools/: agent.rs  dashboard.rs  mcp.rs  mod.rs  proposal.rs  resource.rs  skill.rs
src-tauri/src/commands/: agents.rs  ai.rs  app_settings.rs  harness_api.rs  local_assets.rs  mcp.rs  mod.rs  skills.rs  system.rs
src-tauri/src/db/: mcp_repository.rs  mod.rs
src-tauri/src/db/repositories/: agent_repository.rs  mod.rs  (+2 more)
src-tauri/src/health/: engine.rs  mod.rs  types.rs
src-tauri/src/models/: agent.rs  intelligence.rs  mcp.rs  mod.rs  skill.rs  source.rs
src-tauri/src/scanner/: agent_scanner.rs  description_extractor.rs  ignore_rules.rs  log_scanner.rs  mcp_scanner.rs  mod.rs  skill_scanner.rs
src-tauri/src/security/: path_guard.rs
(+115 files in other folders)
