[package]
name = "nono-harness-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "nono-harness-manager"  # tauri dev 默认跑主 app,而非 harness_cli

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nono_harness_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
walkdir = "2.5.0"
ignore = "0.4.26"
serde_yaml = "0.9.34"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tauri-plugin-log = "2"
log = "0.4.33"
uuid = { version = "1.23.4", features = ["v4"] }
chrono = "0.4.45"
dirs = "6.0.0"
pulldown-cmark = "0.13.4"
